# slug

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/fileslug/: Cargo.toml  README.md
crates/fileslug/src/: lib.rs
docs/plans/: 2026-02-28-pipe-mode-design.md  2026-02-28-pipe-mode.md
slugr/: Cargo.toml
slugr/src/: cli.rs  fixtures.rs  main.rs  rename.rs  walk.rs
slugr/tests/: integration.rs
