[package]
name = "slugr"
version = "0.1.2"
edition = "2021"
rust-version = "1.91"
description = "Rename files and directories to clean, URL and shell-friendly slugs — or pipe arbitrary text through for slugification"
license = "BSD-3-Clause"
repository = "https://github.com/vmunix/slugr"
readme = "../README.md"
keywords = ["slug", "rename", "filename", "cli", "slugify"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
fileslug = { version = "0.1.2", path = "../crates/fileslug" }
clap = { version = "4", features = ["derive"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
