[package]
name = "fileslug"
version = "0.1.2"
edition = "2021"
rust-version = "1.91"
description = "Filename-aware slug generator — slugifies file names (preserving extensions, dotfiles, version numbers) and arbitrary text"
license = "BSD-3-Clause"
repository = "https://github.com/vmunix/slugr"
readme = "README.md"
keywords = ["slug", "filename", "rename", "slugify", "sanitize"]
categories = ["text-processing", "filesystem"]

[dependencies]
any_ascii = "0.3"

[lints]
workspace = true
